--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "cars project",
   "main": "server.js",
   "scripts": {
-
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js"
@@ -17,9 +16,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.0"
-
-    
+    "mongoose": "^7.4.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
